--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -205,6 +205,19 @@
         </property>
        </spacer>
       </item>
+      <item row="1" column="2">
+       <widget class="QPushButton" name="pushButton_10">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Read UTT</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
